--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">background image</string>
+    <string name="app_logo">app logo</string>
+    <string name="mens">Mens</string>
+    <string name="womens">womens</string>
+    <string name="co_ed">CO-ED</string>
+    <string name="next">NEXT</string>
+    <string name="desired_league">Desired League</string>
 </resources>
