--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="co_ed">CO-ED</string>
     <string name="next">NEXT</string>
     <string name="desired_league">Desired League</string>
+    <string name="i_am_a">I am a:</string>
+    <string name="beginner">BEGINNER</string>
+    <string name="baller">BALLER</string>
+    <string name="finish">Finish</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
+    <string name="todo">TODO</string>
+    <string name="get_started">GET STARTED</string>
 </resources>
